...
      headerRight: () => (
        <TouchableOpacity onPress={() => navigation.navigate('AddMember')}>
          <AntDesign
            style={{ paddingRight: 15 }}
            name="pluscircle"
            size={25}
            testID="add-member-icon"
          />
        </TouchableOpacity>
      ),
    })
  }, [navigation])
  const renderList = () => (
...
      }}
    />
  )

  return (
    <SafeAreaView>
      {data && data.length ? renderList() : <Text>No Members added in the list</Text>}
    </SafeAreaView>
  )
}

const styles = StyleSheet.create({
  row: {
...
