...

    setFieldsOnError([])
    onSubmit(valuesToSubmit)
  }

  return (
    <ScrollView testID="member-form">
      <SafeAreaView style={{ margin: 5 }}>
        <MemberFormInputFields
          labelAndPlaceholder="Name"
          inputValue={name}
          inputChangeText={setName}
          editableStatus={true}
...
